# codesentry

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  fly.toml  main.py  pyproject.toml
app/: main.py
app/analysis/: __init__.py  detect.py  diff.py  llm.py  pipeline.py  semgrep.py
app/db/: database.py
app/github/: auth.py  comment.py
rules/python/: ai-antipatterns.yaml
rules/typescript/: ai-antipatterns.yaml
static/: index.html  privacy.html
tests/: push_test_scenarios.sh  send_test_webhook.py  test_database.py  test_detect.py  test_format_comment.py  test_llm.py  test_semgrep.py  test_stress_detect.py  test_stress_format.py  test_stress_llm.py  test_stress_pipeline.py  test_stress_semgrep.py  test_webhook.py
tests/fixtures/: bad_python.py  bad_react.tsx  bad_typescript.ts  clean_python.py
tests/fixtures/edge_cases/: huge_file.py  mixed_content.py  rename_target.py
