[project]
name = "codesentry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.83.0",
    "httpx>=0.27.0",
    "cryptography>=46.0.5",
    "fastapi>=0.129.0",
    "pygithub>=2.8.1",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.41.0",
    "semgrep>=1.152.0",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
